--- a/GreenTown.UI/Views/Home/Map.cshtml
+++ b/GreenTown.UI/Views/Home/Map.cshtml
@@ -7,7 +7,13 @@
 
 <div id="infoList">
      <div class="post">
-		<h2 class="title">Map</h2>
+         
+
+		<h2 class="title" onmouseover="tooltip(this,'Click on the circles with numbers of houses to watch House-info')" 
+              onmouseout="hide_info(this)">
+            Map
+
+		</h2>
 		<div class="story">
 			<img src="/Images/map.png" width="500" height="500" alt="map"usemap="#townmap">
 
