--- a/GreenTown.UI/Views/Shared/_Layout.cshtml
+++ b/GreenTown.UI/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
 </div>
 <!-- end #header -->
 <div id="wrapper">
+    <div  id="mess"></div>
     <div id="content">
 	@RenderBody()
 		<div id="links">
@@ -25,7 +26,8 @@
 						<li><a href="~/Home/Photo">Photo</a></li>
 						<li><a href="~/Home/Map">Map</a></li>
 						<li><a href="~/Home/SocialPrograms">Social programs</a></li>
-                        <li onclick="javascript:Menu()" onload="javascript:CreateMenu()">Houses</li>
+                        <li onclick="javascript:Menu()" onload="javascript:CreateMenu()" onmouseover="tooltip(this,'Houses you can buy')" 
+                            onmouseout="hide_info(this)">Houses</li>
                         <li>
                             <ul id="menu_1" style="display:none;">
                              
@@ -77,6 +79,55 @@
                 menu.display = 'none';
             }
         }
+    </script>
+
+    <script>
+        var d = document;
+        var offsetfromcursorY = 15 // y offset of tooltip
+        var tipobj, op;
+
+        function tooltip(el, txt) {
+            tipobj = d.getElementById('mess');
+            tipobj.innerHTML = txt;
+            op = 0.1;
+            tipobj.style.opacity = op;
+            tipobj.style.visibility = "visible";
+            el.onmousemove = positiontip;
+            appear();
+        }
+
+        function hide_info(el) {
+            d.getElementById('mess').style.visibility = 'hidden';
+            el.onmousemove = '';
+        }
+
+       
+        function positiontip() {
+            var curX = event.clientX + d.body.scrollLeft;
+            var curY = event.clientY + d.body.scrollTop;
+            var winwidth = d.body.clientWidth; 
+            var winheight = d.body.clientHeight;
+
+            var rightedge =  winwidth - event.clientX ;
+            var bottomedge = winheight - event.clientY - offsetfromcursorY;
+
+            if (rightedge < tipobj.offsetWidth) tipobj.style.left = curX - tipobj.offsetWidth + "px";
+            else tipobj.style.left = curX + "px";
+
+            if (bottomedge < tipobj.offsetHeight) tipobj.style.top = curY - tipobj.offsetHeight - offsetfromcursorY + "px"
+            else tipobj.style.top = curY + offsetfromcursorY + "px";
+        }
+
+        function appear() {
+            if (op < 1) {
+                op += 0.1;
+                tipobj.style.opacity = op;
+                tipobj.style.filter = 'alpha(opacity=' + op * 100 + ')';
+                t = setTimeout('appear()', 30);
+            }
+        }
+
+
     </script>
 </body>
 </html>
